@@ -1,3 +1,7 @@
+2014-04-12  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/gui.c, client/gtk/legend.c: Fixed the sizing of the legend
+	tab page in 4:3 mode, which could hide the tabs.
+
 2014-04-06  Roland Clobus <rclobus@rclobus.nl>
 	* common/gtk/common_gtk.c: Ported the button on the notebook page to
 	GTK+3.
